--- a/TaskManagementApp.csproj
+++ b/TaskManagementApp.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskManagementApp.Core\TaskManagementApp.Core.csproj" />
+    <ProjectReference Include="..\TaskManagementApp.Infrastructure\TaskManagementApp.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
