--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TaskManagementApp;Trusted_Connection=True;"
+    "DefaultConnection": "Server=VERNIXO;Database=TaskManagementApp;Trusted_Connection=True;Encrypt=False;"
   }
 }
 
