--- a/appsettings.json
+++ b/appsettings.json
@@ -6,9 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-
   "ConnectionStrings": {
-    "DefaultConnection": "Server=VERNIXO;Database=TaskManagementApp;Trusted_Connection=True;Encrypt=False;"
+    "DefaultConnection": "Server=VERNIXO;Database=TaskManagementApp;Trusted_Connection=True;Encrypt=False;",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TaskManagementApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
-
